--- a/index.html
+++ b/index.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Figtree:wght@500;800&display=swap">
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  <title>Blog Preview Card</title>
-</head>
-<body>
-  <div class="container">
-    <img src="assets/images/illustration-article.svg" alt="Illustration">
-    <h4>Learning</h4>
-    <h5>Published 21 Dec 2023</h5>
-    <h1>HTML & CSS foundations</h1>
-    <p>These languages are the backbone of every website, defining structure, content, and presentation.</p>
-    <div class="image">
-      <img src="assets/images/image-avatar.webp" alt="Author Avatar">
-      <span>Greg Hooper</span>
-    </div>
-  </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Figtree:wght@500;800&display=swap"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/images/favicon-32x32.png"
+    />
+    <title>Blog Preview Card</title>
+  </head>
+  <body>
+    <main class="container">
+      <img
+        id="container__bg"
+        src="assets/images/illustration-article.svg"
+        alt="Illustration"
+      />
+      <h1>Learning</h1>
+      <h2>Published 21 Dec 2023</h2>
+      <h3>HTML & CSS foundations</h3>
+      <p>
+        These languages are the backbone of every website, defining structure,
+        content, and presentation.
+      </p>
+      <section class="image">
+        <img src="assets/images/image-avatar.webp" alt="Author Avatar" />
+        <span>Greg Hooper</span>
+      </section>
+    </main>
+  </body>
 </html>
